@@ -12,13 +12,11 @@ import am.task.EventTask;
 import am.task.TaskEdit;
 import am.task.TodoTask;
 
-/**
- * Converts textual user commands into typed command objects.
- */
+/** Converts textual user commands into typed command objects. */
 public class CommandParser {
-    /**
-     * Creates a command parser.
-     */
+    private static final Pattern MARKER = Pattern.compile("(?<!\\S)/\\S*");
+
+    /** Creates a command parser. */
     public CommandParser() {
     }
 
@@ -26,26 +24,29 @@ public class CommandParser {
      * Parses a complete user command.
      *
      * @param input command text entered by the user
-     * @return the corresponding command object
+     * @return the corresponding command object, or an empty command for blank input
      * @throws InvalidCommandException if the command arguments are malformed
      * @throws UnknownCommandException if the command name is not supported
      */
     public static Command parse(String input) {
-        String[] parts = input.split("\\s+", 2);
-        String commandType = parts[0].trim();
+        if (input.isBlank()) {
+            return new Command.EmptyCommand();
+        }
+        String[] parts = input.strip().split("\\s+", 2);
+        String commandType = parts[0];
         String argument = parts.length > 1 ? parts[1] : "";
         return switch (commandType) {
-            case "bye" -> requireNoArgument(argument, new Command.ByeCommand());
-            case "list" -> requireNoArgument(argument, new Command.ListCommand());
-            case "past" -> requireNoArgument(argument, new Command.PastCommand());
+            case "bye" -> requireNoArgument(argument, commandType, new Command.ByeCommand());
+            case "list" -> requireNoArgument(argument, commandType, new Command.ListCommand());
+            case "past" -> requireNoArgument(argument, commandType, new Command.PastCommand());
             case "find" -> parseFindCommand(argument);
             case "edit" -> parseEditCommand(argument);
-            case "mark" -> new Command.MarkCommand(parseTaskIndex(argument));
-            case "unmark" -> new Command.UnmarkCommand(parseTaskIndex(argument));
+            case "mark" -> new Command.MarkCommand(parseTaskNumber(argument, commandType) - 1);
+            case "unmark" -> new Command.UnmarkCommand(parseTaskNumber(argument, commandType) - 1);
             case "todo" -> parseTodoCommand(argument);
             case "deadline" -> parseDeadlineCommand(argument);
             case "event" -> parseEventCommand(argument);
-            case "delete" -> new Command.DeleteTaskCommand(parseTaskIndex(argument));
+            case "delete" -> new Command.DeleteTaskCommand(parseTaskNumber(argument, commandType) - 1);
             default -> throw new UnknownCommandException(String.format(
                     "AAAAHHHHHHHHHHHHHHH\nYou can't tell me to '%s'", input));
         };
@@ -53,78 +54,49 @@ public class CommandParser {
 
     /** Parses each edit marker once, preserving whitespace inside descriptions. */
     private static Command parseEditCommand(String argument) {
-        String[] parts = argument.trim().split("\\s+", 2);
+        String[] parts = argument.strip().split("\\s+", 2);
         if (parts.length != 2 || argument.contains("\n") || argument.contains("\r")) {
-            throw new InvalidCommandException("You messed up the command.");
+            throw InvalidCommandException.forSyntax("edit");
         }
-        int taskNumber;
-        try {
-            taskNumber = Integer.parseInt(parts[0]);
-        } catch (NumberFormatException exception) {
-            throw new InvalidCommandException("You messed up the command.");
-        }
-        String parameters = parts[1];
-        Matcher markers = Pattern.compile("(?<!\\S)/\\S*").matcher(parameters);
-        Map<String, String> fields = new HashMap<>();
-        String previous = null;
-        int valueStart = 0;
-        while (markers.find()) {
-            if (previous == null && !parameters.substring(0, markers.start()).isBlank()) {
-                throw new InvalidCommandException("You messed up the command.");
-            }
-            if (previous != null) {
-                fields.put(previous, parameters.substring(valueStart, markers.start()).trim());
-            }
-            String marker = markers.group();
-            if (!Set.of("/name", "/by", "/from", "/to").contains(marker) || fields.containsKey(marker)) {
-                throw new InvalidCommandException("You messed up the command.");
-            }
-            previous = marker;
-            valueStart = markers.end();
-        }
-        if (previous == null) {
-            throw new InvalidCommandException("You messed up the command.");
-        }
-        fields.put(previous, parameters.substring(valueStart).trim());
-        if (fields.values().stream().anyMatch(String::isBlank)) {
-            throw new InvalidCommandException("You messed up the command.");
+        int taskNumber = parseTaskNumber(parts[0], "edit");
+        Map<String, String> fields = parseFields(parts[1], Set.of("/name", "/by", "/from", "/to"), "edit");
+        if (fields.containsKey("/name")) {
+            validateDescription(fields.get("/name"), "edit");
         }
         return new Command.EditCommand(taskNumber, new TaskEdit(fields));
     }
 
     /** Returns a command after confirming that it has no arguments. */
-    private static Command requireNoArgument(String argument, Command command) {
-        if (!argument.trim().isEmpty()) {
-            throw new InvalidCommandException("You messed up the command.");
+    private static Command requireNoArgument(String argument, String commandType, Command command) {
+        if (!argument.isBlank()) {
+            throw InvalidCommandException.forSyntax(commandType);
         }
         return command;
     }
 
     /** Parses a find command and validates its keyword. */
     private static Command parseFindCommand(String argument) {
-        String keyword = argument.trim();
+        String keyword = argument.strip();
         if (keyword.isEmpty()) {
-            throw new InvalidCommandException("You messed up the command.");
+            throw InvalidCommandException.forSyntax("find");
         }
         return new Command.FindCommand(keyword);
     }
 
     /** Parses a todo command and validates its task name. */
     private static Command parseTodoCommand(String argument) {
-        String name = argument.trim();
-        if (name.isEmpty()) {
-            throw new InvalidCommandException("You messed up the command.");
-        }
+        String name = argument.strip();
+        validateDescription(name, "todo");
         return new Command.AddTaskCommand(new TodoTask(name));
     }
 
     /** Parses a deadline command and converts its date into a task. */
     private static Command parseDeadlineCommand(String argument) {
-        String[] taskParts = splitTaskArguments(argument);
-        String name = taskParts[0].trim();
-        String by = parseParameter(taskParts[1], "/by");
+        String[] taskParts = splitTaskArguments(argument, "deadline");
+        Map<String, String> fields = parseFields(taskParts[1], Set.of("/by"), "deadline");
+        String by = fields.get("/by").replaceAll("\\s+", " ");
         try {
-            return new Command.AddTaskCommand(new DeadlineTask(name, by));
+            return new Command.AddTaskCommand(new DeadlineTask(taskParts[0], by));
         } catch (DateTimeParseException exception) {
             throw new InvalidCommandException("When is that?");
         }
@@ -132,73 +104,77 @@ public class CommandParser {
 
     /** Parses an event command and converts its dates into a task. */
     private static Command parseEventCommand(String argument) {
-        String[] taskParts = splitTaskArguments(argument);
-        String name = taskParts[0].trim();
-        String from = parseParameter(taskParts[1], "/from");
-        String to = parseParameter(taskParts[1], "/to");
+        String[] taskParts = splitTaskArguments(argument, "event");
+        Set<String> required = Set.of("/from", "/to");
+        Map<String, String> fields = parseFields(taskParts[1], required, "event");
+        if (!fields.keySet().containsAll(required)) {
+            throw InvalidCommandException.forSyntax("event");
+        }
+        String from = fields.get("/from").replaceAll("\\s+", " ");
+        String to = fields.get("/to").replaceAll("\\s+", " ");
         try {
-            return new Command.AddTaskCommand(new EventTask(name, from, to));
+            return new Command.AddTaskCommand(new EventTask(taskParts[0], from, to));
         } catch (DateTimeParseException exception) {
             throw new InvalidCommandException("When is that?");
         }
     }
 
-    /** Splits a task name from the parameter section of a command. */
-    private static String[] splitTaskArguments(String argument) {
-        String[] taskParts = argument.trim().split("\\s+(?=/)", 2);
-        if (taskParts.length < 2) {
-            throw new InvalidCommandException("You messed up the command.");
-        }
-        return taskParts;
+    /** Splits a task name from the parameter section without changing its internal spacing. */
+    private static String[] splitTaskArguments(String argument, String commandType) {
+        Matcher markers = MARKER.matcher(argument);
+        int parameterStart = markers.find() ? markers.start() : argument.length();
+        String name = argument.substring(0, parameterStart).strip();
+        validateDescription(name, commandType);
+        return new String[]{name, argument.substring(parameterStart)};
     }
 
-    /** Converts a one-based user task number into a zero-based list index. */
-    private static int parseTaskIndex(String argument) {
-        String trimmedArgument = argument.trim();
-        if (trimmedArgument.isEmpty()) {
-            throw new InvalidCommandException("You messed up the command.");
-        }
-
-        int userIndex;
+    /** Validates a positive user task number before any zero-based conversion. */
+    private static int parseTaskNumber(String argument, String commandType) {
         try {
-            userIndex = Integer.parseInt(trimmedArgument);
+            int taskNumber = Integer.parseInt(argument.strip());
+            if (taskNumber > 0) {
+                return taskNumber;
+            }
         } catch (NumberFormatException exception) {
-            throw new InvalidCommandException("You messed up the command.");
+            // Missing, non-integer, and overflowing numbers share the same syntax response.
         }
-        return userIndex - 1;
+        throw InvalidCommandException.forSyntax(commandType);
     }
 
-    /** Extracts the value associated with a command marker. */
-    private static String parseParameter(String argument, String marker) {
-        String[] tokens = argument.trim().split("\\s+");
-        StringBuilder value = new StringBuilder();
-        boolean found = false;
-
-        for (int tokenIndex = 0; tokenIndex < tokens.length; tokenIndex++) {
-            if (!tokens[tokenIndex].equals(marker)) {
-                continue;
+    /** Extracts unique supported markers and nonblank values for creation and editing. */
+    private static Map<String, String> parseFields(String parameters, Set<String> allowed, String commandType) {
+        Matcher markers = MARKER.matcher(parameters);
+        Map<String, String> fields = new HashMap<>();
+        String previous = null;
+        int valueStart = 0;
+        while (markers.find()) {
+            if (previous == null && !parameters.substring(0, markers.start()).isBlank()) {
+                throw InvalidCommandException.forSyntax(commandType);
             }
-
-            if (found) {
-                throw new InvalidCommandException("You messed up the command.");
+            if (previous != null) {
+                fields.put(previous, parameters.substring(valueStart, markers.start()).strip());
             }
-            found = true;
-
-            int valueIndex = tokenIndex + 1;
-            for (; valueIndex < tokens.length && !tokens[valueIndex].startsWith("/"); valueIndex++) {
-                if (!value.isEmpty()) {
-                    value.append(" ");
-                }
-                value.append(tokens[valueIndex]);
+            String marker = markers.group();
+            if (!allowed.contains(marker) || fields.containsKey(marker)) {
+                throw InvalidCommandException.forSyntax(commandType);
             }
-            tokenIndex = valueIndex - 1;
+            previous = marker;
+            valueStart = markers.end();
         }
-
-        if (!found || value.isEmpty()) {
-            throw new InvalidCommandException("You messed up the command.");
+        if (previous == null) {
+            throw InvalidCommandException.forSyntax(commandType);
         }
-
-        return value.toString();
+        fields.put(previous, parameters.substring(valueStart).strip());
+        if (fields.values().stream().anyMatch(String::isBlank)) {
+            throw InvalidCommandException.forSyntax(commandType);
+        }
+        return fields;
     }
 
+    /** Rejects descriptions that cannot be represented safely in the saved-file format. */
+    private static void validateDescription(String name, String commandType) {
+        if (name.isBlank() || name.contains("|") || name.contains("\r") || name.contains("\n")) {
+            throw InvalidCommandException.forSyntax(commandType);
+        }
+    }
 }
